src/test/deca/codegen/invalid/read/testRead.deca
// Description:
//    tests readInt
//
// Resultats:
//    En fonction des valeurs entrées
//Par exemple en entrant 1. On obtient:
// x = 1
// 
// Historique:
//    cree le 14/01/2021
{
int x = readInt();
print("x = ", x);}
